Fixed overflow issue with section3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,7 +115,7 @@ h6 {
 .support-img {
     background: url("/assets/img/leaf-background.png") no-repeat center center;
     background-size: cover;
-    height: 600px;
+    height: 125%;
     width: 100%;
 }
 
@@ -163,3 +163,5 @@ h6 {
     text-align: center;
     margin-top: 30px;
 }
+
+/******************Section 3 - support*********************/
